hphp/hack/test/typecheck/invariant_bad_call.php.exp
File "invariant_bad_call.php", line 4, characters 3-11:
Too few arguments (Naming[2037])
