hphp/hack/test/typecheck/invariant_bad_call.php
<?hh // strict

function f(): void {
  invariant();
}
